--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,90 +3,84 @@ body {
   margin: 30px 50px;
   line-height: 1.4;
 }
-  .App {
+.App {
   display: grid;
-  grid-template-areas: repeat(3,1fr);
-
+  grid-template-areas: repeat(3, 1fr);
 }
 .App-header {
   display: grid;
-  background-color: #282C34;
+  background-color: #282c34;
   height: 50px;
-  gird-template-areas: repeat(2,1fr);
+  grid-template-areas: repeat(2, 1fr);
 }
-.App-title{
-  color:#282C34;
+.App-title {
+  color: #282c34;
   font-size: 50px;
   text-align: center;
   font-family: verdana;
-
 }
-.App-menu a{
- text-decoration: none;
- font-style: normal;
- font-size: 25px;
- margin:20px;
- color:#BBBBBB;
+.App-menu a {
+  text-decoration: none;
+  font-style: normal;
+  font-size: 25px;
+  margin: 20px;
+  color: #bbbbbb;
 }
 .App-main {
   display: grid;
-  grid-gap:20px;
-  grid-template-columns:18.7% 18.7% 18.7% 18.7% 18.8%;
+  grid-gap: 20px;
+  grid-template-columns: 18.7% 18.7% 18.7% 18.7% 18.8%;
   list-style-type: none;
 }
 .studnet-img {
   width: 100%;
 }
-.student-details-section{
+.student-details-section {
   display: grid;
   grid-template-columns: 50% 50%;
   list-style-type: none;
   grid-gap: 20px;
   align-items: center;
-
 }
-.studnet-img-details{
- width: 40%;
- list-style-type: none;
+.studnet-img-details {
+  width: 40%;
+  list-style-type: none;
 }
-.student-img-details-info{
+.student-img-details-info {
   list-style-type: none;
   font-style: normal;
   font-family: verdana;
   font-size: 15px;
 }
-.App-form{
-
-}
-input[type=text] {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
+input[type="text"] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
 }
 
-input[type=submit] {
-    width: 100%;
-    background-color: #4CAF50;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+input[type="submit"] {
+  width: 100%;
+  background-color: #4caf50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
-input[type=submit]:hover {
-    background-color: #45a049;
+input[type="submit"]:hover {
+  background-color: #45a049;
 }
 .App-footer {
- text-align: center;
- font-size: 20px;
- font-style: normal;
- color:#333375;
- font-family: sans-serif;
- margin-top: 20px;
+  text-align: center;
+  font-size: 20px;
+  font-style: normal;
+  color: #333375;
+  font-family: sans-serif;
+  margin-top: 20px;
 }
